# leptos_typed_router

./: Cargo.toml
leptos_typed_router/: Cargo.toml
leptos_typed_router/src/: lib.rs  query.rs  route_args.rs  routes.rs  segments.rs
leptos_typed_router_macro/: Cargo.toml
leptos_typed_router_macro/src/: lib.rs  route.rs
